--- a/index.html
+++ b/index.html
@@ -369,50 +369,50 @@
                 <div class="work__card mix web">
                     <img src="assets/img/work1.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">Web Design</h3>
+                    <h3 class="work__title">Link Locker Status: Off</h3>
 
                     <a href="#" class="work__button">
-                        Demo <i class='bx bx-right-arrow work__icon'></i>
+                        View Demo Site<i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
 
                 <div class="work__card mix movil">
                     <img src="assets/img/work2.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">App Movil</h3>
+                    <h3 class="work__title">FakeCash Ai</h3>
 
-                    <a href="#" class="work__button">
-                        Demo <i class='bx bx-right-arrow work__icon'></i>
+                    <a href="https://FinicalScreenShotGenerator_bot" class="work__button">
+                        Open The Telegram Bot<i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
 
                 <div class="work__card mix design">
                     <img src="assets/img/work3.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">Brand Design</h3>
+                    <h3 class="work__title">Web Design</h3>
 
                     <a href="#" class="work__button">
-                        Demo <i class='bx bx-right-arrow work__icon'></i>
+                     View  Demo <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
 
                 <div class="work__card mix web">
                     <img src="assets/img/work4.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">Web Design</h3>
+                    <h3 class="work__title">UltraSMS App</h3>
 
-                    <a href="#" class="work__button">
-                        Demo <i class='bx bx-right-arrow work__icon'></i>
+                    <a href="https://t.me/Teamx1337official/641" class="work__button">
+                        View Now Status : Off<i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
 
                 <div class="work__card mix movil">
                     <img src="assets/img/work5.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">App Movil</h3>
+                    <h3 class="work__title">Temp Mailer</h3>
 
                     <a href="#" class="work__button">
-                        Demo <i class='bx bx-right-arrow work__icon'></i>
+                        Open The Telegram Bot<i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
 
