--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
                     <h3 class="work__title">FakeCash Ai</h3>
 
-                    <a href="https://FinicalScreenShotGenerator_bot" class="work__button">
+                    <a href="https:/t.me/FinicalScreenShotGenerator_bot" class="work__button">
                         Open The Telegram Bot<i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
@@ -411,7 +411,7 @@
 
                     <h3 class="work__title">Temp Mailer</h3>
 
-                    <a href="#" class="work__button">
+                    <a href="https://t.me/XtempMailer_bot" class="work__button">
                         Open The Telegram Bot<i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
