--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
             <div class="work__container container grid">
                 <div class="work__card mix web">
-                    <img src="assets/img/work1.jpg" alt="" class="work__img">
+                    <img src="https://gcdnb.pbrd.co/images/DzH6TklWGsjz.jpg?o=1" alt="" class="work__img">
 
                     <h3 class="work__title">Link Locker Status: Off</h3>
 
@@ -377,17 +377,19 @@
                 </div>
 
                 <div class="work__card mix movil">
-                    <img src="assets/img/work2.jpg" alt="" class="work__img">
+                    <img src="https://gcdnb.pbrd.co/images/voaiZklZ1fwz.jpg?o=1" alt="" class="work__img">
 
                     <h3 class="work__title">FakeCash Ai</h3>
 
-                    <a href="https:/t.me/FinicalScreenShotGenerator_bot" class="work__button">
+                    <a href="https:/t.me/FinicalScreenShotGenerator_bot"
+                    
+                    class="work__button">
                         Open The Telegram Bot<i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
 
                 <div class="work__card mix design">
-                    <img src="assets/img/work3.jpg" alt="" class="work__img">
+                    <img src="https://gcdnb.pbrd.co/images/xrzKdK2S7uVM.jpg?o=1" alt="" class="work__img">
 
                     <h3 class="work__title">Web Design</h3>
 
@@ -397,7 +399,7 @@
                 </div>
 
                 <div class="work__card mix web">
-                    <img src="assets/img/work4.jpg" alt="" class="work__img">
+                    <img src="https://gcdnb.pbrd.co/images/KilUn7cLZEQ2.jpg?o=1" alt="" class="work__img">
 
                     <h3 class="work__title">UltraSMS App</h3>
 
@@ -407,7 +409,7 @@
                 </div>
 
                 <div class="work__card mix movil">
-                    <img src="assets/img/work5.jpg" alt="" class="work__img">
+                    <img src="https://gcdnb.pbrd.co/images/3q2PqbKYhKgf.jpg?o=1" alt="" class="work__img">
 
                     <h3 class="work__title">Temp Mailer</h3>
 
