--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                         </div>
 
                         <div class="contact__card">
-                            <i class='bx bxl-whatsapp contact__card-icon'></i>
+                            <i class='bx bxl-whatsapp contact__card-icon'></i><br>
                             <h3 class="contact__card-title">Telegram</h3>
 
 
